--- a/package.xml
+++ b/package.xml
@@ -54,8 +54,11 @@
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
+  <build_export_depend>tf</build_export_depend>
+  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>tf</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
